[package]
name = "mapbox_vector_tile"
version = "0.1.0"
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Work with Slippy map tile names, found in OpenStreetMap"
keywords = ["openstreetmap", "osm", "vector-tiles", "geo"]
license = "AGPL-3.0"
repository = "https://github.com/rory/rust-mapbox-vector-tile"
homepage = "https://github.com/rory/rust-mapbox-vector-tile"

[dependencies]
geo = "0.7.3"
protobuf = "1.4.3"
flate2 = "1.0.1"
slippy-map-tiles = "0.14.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"
failure = "0.1.1"
