[package]
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Work with Slippy map tile names, found in OpenStreetMap"
homepage = "https://github.com/rory/rust-mapbox-vector-tile"
keywords = ["openstreetmap", "osm", "vector-tiles", "geo"]
license = "AGPL-3.0"
name = "mapbox_vector_tile"
repository = "https://github.com/rory/rust-mapbox-vector-tile"
version = "0.3.0"

[dependencies]
failure = "0.1.1"
flate2 = "1.0.1"
geo = "0.10.2"
protobuf = "~1.4.3"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"
slippy-map-tiles = "0.14.0"
